Tue May 15 04:01:27 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * DevGuideExamples/DDS/Messenger_ZeroCopy/DataReaderListener.cpp:

          Update per updates to the Dev. Guide.

Mon May 14 18:55:09 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/unit/Main.cpp:

          Use ACE_Time_Value to compare times in order to hide platform
          differences in signed/unsigned time values.

Mon May 14 17:57:07 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcp.cpp:

          Reinstated a corrected version of the change that was reverted in...
          Sun May 13 21:53:00 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * docs/INSTALL:

          Updated installation instructions.

Sun May 13 21:53:00 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcp.cpp:

          Partially reverted the change from...
          Fri May 11 14:01:18 UTC 2007  Adam Mitz  <mitza@ociweb.com>
          ...since even though it worked for static builds, it broke many of
          the shared-library builds.

Sun May 13 21:10:38 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc/dds.doxygen:

          Fixed the Doxygen config to pick up all library source files.

Fri May 11 16:25:43 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc:
        * etc/dds.doxygen:

          Added a Doxygen configuration file for DDS.

Fri May 11 14:41:01 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Re-enabled the Reconnect test.

        * tests/DCPS/BuiltInTopicTest/run_test.pl:
        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/Reconnect/run_test.pl:
        * tests/DCPS/TransientLocalTest/run_test.pl:
        * tests/DCPS/unit/run_test.pl:

          Reverted some of my changes from...
          Thu May 10 14:50:47 UTC 2007  Adam Mitz  <mitza@ociweb.com>
          ...it turns out that the redirected STDERR or STDOUT needs to be