@@ -22,12 +22,14 @@ if ($ARGV[0] eq "-client_orb") {
  $client_orb = 1;
 }
 
-$REPO = new PerlACE::Process ("$ENV{DDS_ROOT}/bin/DCPSInfoRepo"
-			      , "-o $iorfile -d domain_ids -ORBSvcConf ../../tcp.conf");
+$svc_config = "-ORBSvcConf ../../tcp.conf";
 
-$svc_config=" -ORBSvcConf ../../tcp.conf ";
-$CL = new PerlACE::Process ("DdsDcps_UnitTest"
-			    , " -DCPSInfoRepo file://$iorfile $svc_config -c $client_orb");
+$REPO = new PerlACE::Process ("$ENV{DDS_ROOT}/bin/DCPSInfoRepo"
+			      , "-o $iorfile -d domain_ids $svc_config");
+
+$CL = new PerlACE::Process ("DdsDcps_UnitTest",
+                            "-DCPSInfoRepo file://$iorfile $svc_config " .
+                            "-c $client_orb -ORBLogFile $testoutputfilename");
 
 print $REPO->CommandLine() . "\n" if $debug ;
 $REPO->Spawn ();
@@ -40,15 +42,7 @@ if (PerlACE::waitforfile_timed ($iorfile, 5) == -1) {
 
 print $CL->CommandLine() . "\n" if $debug ;
 
-# save output to a file because the output contains the text "ERROR", but we
-# don't want it flagged as a failure on the scoreboard (ERRORs are expected)
-open(SAVEERR, ">&STDERR");
-open(STDERR, ">$testoutputfilename") || die "ERROR: Can't redirect stderr";
-
 $client = $CL->SpawnWaitKill (30);
-
-close(STDERR);
-open(STDERR, ">&SAVEERR") || die "ERROR: Can't redirect stderr";
 
 if ($client != 0) {
     print STDERR "ERROR: client returned $client\n";
